fixed login alignment

--- a/crowdsource/style.css
+++ b/crowdsource/style.css
@@ -17,18 +17,17 @@ body {
 #login_table {
 	display: none;
 	border-radius: .4em;
-	background: #A4A4A4;
 	margin-top: .5em;
 	font-size: .6em;
-	padding: .5em;
-	width: 25%;
-	position: relative;
-	left: 75%; top: 0%;
+	position: absolute;
+	right: 1em; top: 4em;
 	z-index: 1;
+	text-align: right;
 }
 
 #login_table td {
-
+	text-align: right;
+	padding: .3em .5em .3em .5em;
 }
 
 #header_bar {
@@ -68,7 +67,7 @@ a.goButton {
 	font-weight: bold;
 	text-decoration: none;
 	border-radius: .5em;
-	padding: .5em;
+	padding: .5em 1em .4em 1em;
 	background: #3ADF00;
 }
 
